--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
         <a href="/"></a>
         <nav>
-            <ul><a href="WebStudio"></a></li>
+            <ul>
+            <li><a href="WebStudio"></a></li>
             <li><a href="">Студія</a></li>
             <li><a href="">Портфоліооліо</a></li>
             <li><a href="">Контакти</a></li>
