update index html file

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </p>
         <section> class="Чим ми займаємося"</section>
         <h3>Чим ми займаємося</h3>
-        <img> src="./img/netbook.jpg" alt="netbook" width="370" height="294"
-        <img> src="./img/netbook2.jpg" alt="netbook2" width="370" height="294"
-        <img> src="./img/netbook3.jpg" alt="netbook3" width="370"height="294"
+        <img> src="./img/notebook.jpg" alt="notebook" width="370" height="294"
+        <img> src="./img/notebook2.jpg" alt="notebook2" width="370" height="294"
+        <img> src="./img/notebook3.jpg" alt="notebook3" width="370"height="294"
         <section> class="Наша команда</section>
         <h4>Наша команда</h4>
         <img> scr="./img/Ігор Демяненко.jpg" alt="Ігор Демяненко" width="270" height="260"
