--- a/index.html
+++ b/index.html
@@ -46,21 +46,22 @@
         </p>
         <section> class="Чим ми займаємося"</section>
         <h3>Чим ми займаємося</h3>
-        <img> src="./img/notebook.jpg" alt="notebook" width="370" height="294"
-        <img> src="./img/notebook2.jpg" alt="notebook2" width="370" height="294"
-        <img> src="./img/notebook3.jpg" alt="notebook3" width="370"height="294"
+        <img src="./img/notebook.jpg" alt="notebook" width="370" height="294"/>
+        <img src="./img/notebook2.jpg" alt="notebook2" width="370" height="294"/>
+        <img src="./img/notebook3.jpg" alt="notebook3" width="370"height="294"/>
         <section> class="Наша команда</section>
         <h4>Наша команда</h4>
-        <img> scr="./img/Ігор Демяненко.jpg" alt="Ігор Демяненко" width="270" height="260"
+        <img src="./img/Ігор Дем'яненко.jpg" alt="Ігор Дем'яненко" width="270" height="260"/>
         <p>Ігор Дем'яненко</p>
         <a>Product Designer</a>
-        <img> scr="./img/Ольга Рєпіна.jpg" alt="Ольга Рєпіна" width="270" height="260"
+
+        <img src="./img/Ольга Рєпіна.jpg" alt="Ольга Рєпіна" width="270" height="260"/>
         <p>Ольга Рєпіна</p>
         <a>Frontend Developer</a>
-        <img> scr="./img/Микола Тарасов.jpg" alt="Микола Тарасов" width="270" height="260"
+        <img src="./img/Микола Тарасов.jpg" alt="Микола Тарасов" width="270" height="260"/>
         <p>Микола Тарасов</p>
         <a>Marketing</a>
-        <img> scr="./img/Михайло Єрмаков.jpg" alt="михайло Єрмаков" width="270" height="260"
+        <img src="./img/Михайло Єрмаков.jpg" alt="Михайло Єрмаков" width="270" height="260"/>
         <p>Михайло Єрмаков</p>
         <a>UI Designer</a>
          </main>
