update index html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section>
         <h3>Чим ми займаємося</h3>
-        <img src="./img/notebook.jpg" alt="notebook" width="370">
+        <img src="./img/notebook8.jpg" alt="notebook" width="370">
         <img src="./img/notebook2.jpg" alt="notebook2" width="370">
         <img src="./img/notebook3.jpg" alt="notebook3" width="370">
         </section>
