update index html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <a href="./#">WebStudio</a>
+        <a href="#">WebStudio</a>
         <nav>
         <ul>
             
-           <li><a href="./#">Студія</a></li>
-            <li><a href="./#">Портфоліо</a></li>
-            <li><a href="./#">Кантакти</a></li>
+           <li><a href="#">Студія</a></li>
+            <li><a href="#">Портфоліо</a></li>
+            <li><a href="#">Кантакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -51,34 +51,34 @@
         <ul>
         <li><img src="./img/notebook8.jpg" alt="notebook" width="370"></li>
         <li><img src="./img/notebook2.jpg" alt="notebook2" width="370"></li>
-        <li><img src="./img/notebook3.jpg" alt="notebook3" width="370"></ul>
+        <li><img src="./img/notebook3.jpg" alt="notebook3" width="370"></li></ul>
         
         </section>
 
         <section> 
-        <h3>Наша команда</h3>
+        <h2>Наша команда</h2>
         <ul>
-        <li><img src="./img/box1.jpg" alt="Ігор Дем'яненко" width="270"></li>
-        <li>Ігор Дем'яненко</li>
-        <li><a>Product Designer</a></li>
+        <li><img src="./img/box1.jpg" alt="Ігор Дем'яненко" width="270">
+        <h3>Ігор Дем'яненко</h3>
+        <p>Product Designer</p></li>
 
-        <li><img src="./img/box2.jpg" alt="Ольга Рєпіна" width="270"></li>
-        <li>Ольга Рєпіна</li>
-        <li><a>Frontend Developer</a><li>
-        <li><img src="./img/box3.jpg" alt="Микола Тарасов" width="270"></li>
-        <li>Микола Тарасов</li>
-        <li><a>Marketing</a></li>
-        <li><img src="./img/box4.jpg" alt="Михайло Єрмаков" width="270"></li>
-        <li>Михайло Єрмаков</li>
-        <li><a>UI Designer</a></li>
+        <li><img src="./img/box2.jpg" alt="Ольга Рєпіна" width="270">
+        <h3>Ольга Рєпіна</h3>
+        <p>Frontend Developer</p><li>
+        <li><img src="./img/box3.jpg" alt="Микола Тарасов" width="270">
+        <h3>Микола Тарасов</h3>
+        <p>Marketing</p></li>
+        <li><img src="./img/box4.jpg" alt="Михайло Єрмаков" width="270">
+        <h3>Михайло Єрмаков</h3>
+        <p>UI Designer</p></li>
         </ul>
         </section>
          </main>
     <footer>
-        <a href="./#">WebStudio</a>
+        <a href="#">WebStudio</a>
          <address>
             <ul>
-                <li><a href="./#"> м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="#"> м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
